--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.17.1
 annotated-types==0.7.0
 blinker==1.9.0
 cachetools==6.2.1
@@ -7,6 +8,7 @@ click==8.3.0
 colorama==0.4.6
 dotenv==0.9.9
 Flask==3.1.2
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 google-ai-generativelanguage==0.6.15
 google-api-core==2.28.1
@@ -23,6 +25,7 @@ httplib2==0.31.0
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.10
 MarkupSafe==3.0.3
 numpy==2.3.4
 oauthlib==3.3.1
