--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.17.1
 annotated-types==0.7.0
 blinker==1.9.0
+CacheControl==0.14.3
 cachetools==6.2.1
 certifi==2025.10.5
 charset-normalizer==3.4.4
@@ -8,6 +9,7 @@ click==8.3.0
 colorama==0.4.6
 dotenv==0.9.9
 Flask==3.1.2
+Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 google-ai-generativelanguage==0.6.15
@@ -27,6 +29,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.3
+msgpack==1.1.2
 numpy==2.3.4
 oauthlib==3.3.1
 pandas==2.3.3
