--- a/.gitignore
+++ b/.gitignore
@@ -221,4 +221,4 @@ app/auth/client_secrets.json
 migrations
 
 .model_inference/final3/model.safetensors
-.model_inference/final3/safetensors
+.model_inference/final3/optimizer.pt
